add post routes public and private and post tag routes
